+, *, or : button will enter them into the model formula.
   
   o  The compare-models and Anova-table code for GLMs now uses F-tests when the dispersion parameter is estimated (after a suggstion by Ulrich Halekoh).
   
   o  Added optional pairwise p-values to correlations dialog (several requests); new rcorr.adjust() function, adapted from code sent by Robert A. Muenchen.
   
   o  New Library() command for loading packages. Packages generally attached in position 4, to avoid masking objects in Rcmdr and car.
   
   o  Messages in the Messages window are now numbered, according to the Rcmdr number.messages option (suggested by Liviu Andronic).
   
   o  Added dialog box to merge rows and columns, along with mergeRows() function (after a suggestion by Stephen Shamblen).
   
   o  Added aggregate dialog box to aggregate variables by factor(s) (after a suggestion by Stephen Shamblen).
   
   o  Added variable.list.width option (suggested by Liviu Andronic).
   
   o  Under Windows, a check is made for the mdi and a warning message printed, if it's detected (courtesy of code from Uwe Ligges).
   
   o  Updated Commander.Rd.
   
   o  Small changes.
   
Version 1.5-1

   o  Fixes to links in docs (pointed out by Brian Ripley).
   
Version 1.5-2

   o  Updated Spanish translation (courtesy of Manuel Munoz Marquez).
   
   o  Updated Russian translation (courtesy of Alexey Shipunov).
   
   o  Fixed bug in pie chart dialog causing the colorspace package not to load properly (reported by Massimiliano Amati).

Version 1.5-3

   o  Updated Japanese translation (courtesy of Takaharu Araki).
   
   o  Updated French translation (courtesy of Philippe Grosjean).
   
   o  Updated Romanian translation (courtesy of Adrian Dusa).

   o  Updated Indonesian translation (coutersy of I Made Tirta).
   
   o  Small changes.
   
Version 1.5-4

   o  rcorr.adjust() now returns an object of class "rcorr.adjust" (to satisfy a request by Liviu Andronic).
