@@ -1,4 +1,4 @@
-# last modified 8 November 2009 by J. Fox + slight changes 12 Aug 04 by Ph. Grosjean
+# last modified 15 November 2009 by J. Fox + slight changes 12 Aug 04 by Ph. Grosjean
 
 # utility functions
 
@@ -280,70 +280,89 @@ partial.cor <- function(X, ...){
     R
     }
 
-Confint <- function(object, parm, level=0.95, ...) UseMethod("Confint")
-
-Confint.default <- function(object, parm, level = 0.95, ...) confint(object, parm, level, ...)
-
-Confint.glm <- function (object, parm, level=0.95, type=c("LR", "Wald"), ...){
-    # adapted from stats:::confint.lm
-    type <- match.arg(type)
-    if (type == "LR") return(MASS:::confint.glm(object, parm, level, ...))
-        cf <- coef(object)
-    pnames <- names(cf)
-    if (missing(parm))
-        parm <- seq(along = pnames)
-    else if (is.character(parm))
-        parm <- match(parm, pnames, nomatch = 0)
-    a <- (1 - level)/2
-    a <- c(a, 1 - a)
-    pct <- paste(round(100 * a, 1), "%")
-    ci <- array(NA, dim = c(length(parm), 2), dimnames = list(pnames[parm],
-        pct))
-    ses <- sqrt(diag(vcov(object)))[parm]
-    fac <- qnorm(a)
-    ci[] <- cf[parm] + ses %o% fac
-    ci
-    }
-
-confint.polr <- function (object, parm, level=0.95, ...){
-    # adapted from stats:::confint.lm
-    cf <- coef(object)
-    pnames <- names(cf)
-    if (missing(parm))
-        parm <- seq(along = pnames)
-    else if (is.character(parm))
-        parm <- match(parm, pnames, nomatch = 0)
-    a <- (1 - level)/2
-    a <- c(a, 1 - a)
-    pct <- paste(round(100 * a, 1), "%")
-    ci <- array(NA, dim = c(length(parm), 2), dimnames = list(pnames[parm],
-        pct))
-    ses <- sqrt(diag(vcov(object)))[parm]
-    fac <- qnorm(a)
-    ci[] <- cf[parm] + ses %o% fac
-    ci
-    }
-
-confint.multinom <- function (object, parm, level=0.95, ...){
-    # adapted from stats:::confint.lm
-    cf <- coef(object)
-    if (is.vector(cf)) cf <- matrix(cf, nrow=1,
-        dimnames=list(MLM.1$lev[2], names(cf)))
-    pnames <- colnames(cf)
-    if (missing(parm))
-        parm <- seq(along = pnames)
-    else if (is.character(parm))
-        parm <- match(parm, pnames, nomatch = 0)
-    a <- (1 - level)/2
-    a <- c(a, 1 - a)
-    ses <- matrix(sqrt(diag(vcov(object))),
-        ncol=ncol(cf), byrow=TRUE)[,parm, drop=FALSE]
-    cf <- cf[,parm, drop=FALSE]
-    fac <- qnorm(a)
-    ci <- abind(cf + fac[1]*ses, cf + fac[2]*ses, along=3)
-    dimnames(ci)[[3]] <- paste(round(100 * a, 1), "%")
-    aperm(ci, c(2,3,1))
-    }
+	Confint <- function(object, parm, level=0.95, ...) UseMethod("Confint")
+	
+	Confint.default <- function(object, parm, level = 0.95, ...) {
+		ci <- confint(object, parm, level, ...)
+		ci <- cbind(coef(object), ci)
+		colnames(ci)[1] <- "Estimate"
+		ci
+	}
+	
+	Confint.glm <- function (object, parm, level=0.95, type=c("LR", "Wald"), ...){
+		# adapted from stats:::confint.lm
+		type <- match.arg(type)
+		cf <- coef(object)
+		pnames <- names(cf)
+		if (type == "LR") 
+			ci <- (MASS:::confint.glm(object, parm, level, ...))
+		else {
+			if (missing(parm))
+				parm <- seq(along = pnames)
+			else if (is.character(parm))
+				parm <- match(parm, pnames, nomatch = 0)
+			a <- (1 - level)/2
+			a <- c(a, 1 - a)
+			pct <- paste(round(100 * a, 1), "%")
+			ci <- array(NA, dim = c(length(parm), 2), dimnames = list(pnames[parm],
+					pct))
+			ses <- sqrt(diag(vcov(object)))[parm]
+			fac <- qnorm(a)
+			ci[] <- cf[parm] + ses %o% fac
+		}
+		ci <- cbind(cf, ci)
+		colnames(ci)[1] <- "Estimate"
+		fam <- family(object)
+		if (fam$family == "binomial" && fam$link == "logit"){
+			expci <- exp(ci)
+			colnames(expci)[1] <- "exp(Estimate)"
+			ci <- cbind(ci, expci)
+		}
+		ci
+	}
+	
+	confint.polr <- function (object, parm, level=0.95, ...){
+		# adapted from stats:::confint.lm
+		cf <- coef(object)
+		pnames <- names(cf)
+		if (missing(parm))
+			parm <- seq(along = pnames)
+		else if (is.character(parm))
+			parm <- match(parm, pnames, nomatch = 0)
+		a <- (1 - level)/2
+		a <- c(a, 1 - a)
+		pct <- paste(round(100 * a, 1), "%")
+		ci <- array(NA, dim = c(length(parm), 2), dimnames = list(pnames[parm],
+				pct))
+		ses <- sqrt(diag(vcov(object)))[parm]
+		fac <- qnorm(a)
+		ci[] <- cf[parm] + ses %o% fac
+		ci
+	}
+	
+	confint.multinom <- function (object, parm, level=0.95, ...){
+		# adapted from stats:::confint.lm
+		require("abind")
+		cf <- coef(object)
+		if (is.vector(cf)) cf <- matrix(cf, nrow=1,
+				dimnames=list(object$lev[2], names(cf)))
+		pnames <- colnames(cf)
+		if (missing(parm))
+			parm <- seq(along = pnames)
+		else if (is.character(parm))
+			parm <- match(parm, pnames, nomatch = 0)
+		a <- (1 - level)/2
+		a <- c(a, 1 - a)
+		ses <- matrix(sqrt(diag(vcov(object))),
+			ncol=ncol(cf), byrow=TRUE)[,parm, drop=FALSE]
+		cf <- cf[,parm, drop=FALSE]
+		fac <- qnorm(a)
+		ci <- abind(cf + fac[1]*ses, cf + fac[2]*ses, along=3)
+		dimnames(ci)[[3]] <- paste(round(100 * a, 1), "%")
+		aperm(ci, c(2,3,1))
+	}
+	
+	Confint.multinom <- function(object, parm, level = 0.95, ...) confint (object, parm=parm, level=0.95, ...)
 
 numSummary <- function(data, statistics=c("mean", "sd", "quantiles"),
     quantiles=c(0, .25, .5, .75, 1), groups){
